2007-09-18  Shawn  <sabetts@hardcopy.local>

	* core.lisp (clear-window-marks): take optional windows arg.
	(:client-message): comment out _NET_WM_STATE section
	(geometry-hints): use min-width/height hints for transients if it
	exists.
	(xwin-grab-buttons): set :sync-keyboard-p to nil

	* user.lisp ("gmove-marked"): new command

2007-09-16  Shawn  <sabetts@hardcopy.local>

	* primitives.lisp (+netwm-supported+): add _NET_WM_STATE,
	_NET_WM_FULL_WINDOW_PLACEMENT, _NET_CLOSE_WINDOW,
	_NET_WM_ALLOWED_ACTIONS
	(+netwm-allowed-actions+): new constant

	* core.lisp (process-mapped-window): set allowed actions
	(:client-message): handle _NET_CLOSE_WINDOW and _NET_WM_STATE
	(focus-all): switch to window's group and raise the window in its frame

	* primitives.lisp (+netwm-supported+): add _NET_ACTIVE_WINDOW

	* core.lisp (netwm-set-group-properties): sort groups for _NET_DESKTOP_NAMES
	(screen-set-focus): set _NET_ACTIVE_WINDOW property
	(:client-message): handle _NET_ACTIVE_WINDOW

	* user.lisp (move-focus-and-or-window): new function
	("move-focus"): use move-focus-and-or-window
	("move-window"): new command
	(*root-map*): new bindings M-Up, M-Down, M-Left, M-Right

	* primitives.lisp (*frame-outline-width*): new global var

	* core.lisp (draw-frame-outlines): improve frame outlining

	* primitives.lisp (*mouse-focus-policy*): renamed from
	*focus-policy*. all callers updated.

	* core.lisp (xwin-hide): take a window as argument. unmap the xwin
	and the parent. all callers updated.

	* stumpwm.asd (:stumpwm): add cl-ppcre dependency

	* configure.ac: add xdpyinfo test

	* user.lisp (banish-pointer): use the current head to get mouse warp coordinates
	(remove-split): add message when no frames can be removed. handle xinerama heads
	("only"): handle xinerama heads
	("resize"): change error message when no frames can be resized.
	("iresize"): add message when no frames can be resized

	* primitives.lisp (screen): add heads slot
